--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/currentpanel.css" rel="stylesheet" />
+    <link href="css/forecastpanel.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <title>Weather</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.min.js"></script>
@@ -13,18 +25,18 @@
   <body ng-app="WeatherApp">
     <div ng-view></div>
 
-
-
-
     <!-- Modules -->
     <script src="js/app.js"></script>
+
+    <!-- Services -->
+    <script src="js/services/weatherdata.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/HomeController.js"></script>
     <script src="js/controllers/ForecastController.js"></script>
 
-    <!-- Services -->
-    <script src="js/services/weatherdata.js"></script>
-    
+    <!-- Directives -->
+    <script src="js/directives/navbar.js"></script>
+    <script src="js/directives/individualcast.js"></script>
   </body>
 </html>
