--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/navbar.css" rel="stylesheet" />
     <link href="css/currentpanel.css" rel="stylesheet" />
     <link href="css/forecastpanel.css" rel="stylesheet" />
+    <link href="css/daycast.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
