--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
+<!-- index.html - index page for weather app -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head ng-cloak>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- CSS Styling -->
     <link href="css/main.css" rel="stylesheet" />
     <link href="css/navbar.css" rel="stylesheet" />
     <link href="css/currentpanel.css" rel="stylesheet" />
     <link href="css/forecastpanel.css" rel="stylesheet" />
     <link href="css/daycast.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
-    />
+    <!-- Bootstrap styling -->
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -25,18 +25,15 @@
   </head>
 
   <body ng-app="WeatherApp">
+    <!-- Main view for the app -->
     <div ng-view></div>
-
     <!-- Modules -->
     <script src="js/app.js"></script>
-
     <!-- Services -->
     <script src="js/services/weatherdata.js"></script>
-
     <!-- Controllers -->
     <script src="js/controllers/HomeController.js"></script>
     <script src="js/controllers/ForecastController.js"></script>
-
     <!-- Directives -->
     <script src="js/directives/navbar.js"></script>
     <script src="js/directives/individualcast.js"></script>
