Prepping app for deploy

--- a/app/index.html
+++ b/app/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- CSS Styling -->
-    <link href="css/main.css" rel="stylesheet" />
-    <link href="css/navbar.css" rel="stylesheet" />
-    <link href="css/currentpanel.css" rel="stylesheet" />
-    <link href="css/forecastpanel.css" rel="stylesheet" />
-    <link href="css/daycast.css" rel="stylesheet" />
+    <link href="styles/main.css" rel="stylesheet" />
+    <link href="styles/navbar.css" rel="stylesheet" />
+    <link href="styles/currentpanel.css" rel="stylesheet" />
+    <link href="styles/forecastpanel.css" rel="stylesheet" />
+    <link href="styles/daycast.css" rel="stylesheet" />
     <!-- Bootstrap styling -->
     <link
       rel="stylesheet"
@@ -28,14 +28,14 @@
     <!-- Main view for the app -->
     <div ng-view></div>
     <!-- Modules -->
-    <script src="js/app.js"></script>
+    <script src="scripts/app.js"></script>
     <!-- Services -->
-    <script src="js/services/weatherdata.js"></script>
+    <script src="scripts/services/weatherdata.js"></script>
     <!-- Controllers -->
-    <script src="js/controllers/HomeController.js"></script>
-    <script src="js/controllers/ForecastController.js"></script>
+    <script src="scripts/controllers/HomeController.js"></script>
+    <script src="scripts/controllers/ForecastController.js"></script>
     <!-- Directives -->
-    <script src="js/directives/navbar.js"></script>
-    <script src="js/directives/individualcast.js"></script>
+    <script src="scripts/directives/navbar.js"></script>
+    <script src="scripts/directives/individualcast.js"></script>
   </body>
 </html>
